versions/v0.15.x/embedded/guides/encrypted-indexes/train-index.mdx
---
title: "Train an Encrypted Index"
sidebarTitle: "Train Index"
mode: "wide"
canonical: https://docs.cyborg.co/versions/latest/embedded/guides/encrypted-indexes/train-index
---


CyborgDB uses `IVF*` index types, which leverage clustering algorithms to segment the index into smaller sections for efficient querying. These clustering algorithms must be trained on the specific data being indexed in order to adequately represent that data.

In the embedded library version of CyborgDB, this training must be explicitly called once enough vectors have been added:

<CodeGroup>
```python Python icon="python"
# Train the encrypted index
index.train()

# Train the index with a specific number of clusters
index.train(n_lists=1024)

# Train the index with specific configuration
index.train(
    n_lists=1024, 
    batch_size=64, 
    max_iters=100
)
```

```cpp C++ icon="brackets-curly"
// Train the encrypted index with default configuration
index->TrainIndex();

// Train the index with specific configuration
cyborg::TrainingConfig config(1024, 2048, 100, 1e-6, 0);
index->TrainIndex(config);
```
</CodeGroup>

<Tip>You must have at least `2 * n_lists` or `10,000` (whichever is greater) vectors in the index (ingested via `upsert`) before you can call `train`.</Tip>

## Training Parameters

Parameters are available to customize the training process:

| Parameter | Type | Default | Description |
|---------------|--------|---------|-------------------------------------------------------|
| `n_lists` | `int` | `None` | _(Optional)_ Number of inverted index lists to create in the index. When `None`, auto-determines based on the number of vectors in the index. |
| `batch_size` | `int` | `None` | _(Optional)_ Size of each batch for training. When `None`, defaults to `2048`. |
| `max_iters` | `int` | `None` | _(Optional)_ Maximum number of iterations for training. When `None`, defaults to `100`. |
| `tolerance` | `float`| `None` | _(Optional)_ Convergence tolerance for training. When `None`, defaults to `1e-6`. |
| `max_memory` | `int`| `None` | _(Optional)_ Maximum memory to use for training. When `None`, defaults to `0` (no limit). |

`n_lists` is the number of clusters into which each vector in the index can be categorized. Typically, the higher the value, the higher the recall (but also the slower the indexing process). As a good rule of thumbs, `n_lists` should be:

- A base-2 number (e.g., `2,048`, `4,096`). Not a requirement, but yields performance optimizations.
- Each cluster should have between `100` - `10,000` vectors; so `n_lists` should be roughly between `1/100` - `1/10,000` of the total number of items which will be indexed.

If not provided, `n_lists` will be auto-selected based on the number of vectors in the index.

## Warnings with Large Untrained Queries

While training is technically optional (you can use CyborgDB without ever calling `train`), it is recommended that you do so once you have a large number of vectors in the index (e.g., `> 50,000`). If you don't, and you call `query`, you will see a warning in the console, stating:

```
Warning: querying untrained index with more than 50000 indexed vectors.
```

## API Reference

For more information on training an encrypted index, refer to the API reference:

<CardGroup cols={2}>
    <Card title="Python API Reference" href="../../python/encrypted-index/train" icon="python">
        API reference for `train()` in Python
    </Card>
    <Card title="C++ API Reference" href="../../cpp/encrypted-index/train" icon="brackets-curly">
        API reference for `TrainIndex()` in C++
    </Card>
</CardGroup>